local/logs/project.log
2019-07-20T08:34:51.451Z - normal: Load ~/.CocosCreator/settings.json
2019-07-20T08:34:51.512Z - normal: Initializing Asset Database
2019-07-20T08:34:51.515Z - normal: checking language setting...
2019-07-20T08:34:51.515Z - normal: Language: zh
2019-07-20T08:34:52.076Z - success: preview server running at http://localhost:7456
2019-07-20T08:34:52.181Z - success: protocol editor-framework registered
2019-07-20T08:34:52.181Z - success: protocol app registered
2019-07-20T08:34:52.181Z - success: protocol theme registered
2019-07-20T08:34:52.181Z - success: protocol packages registered
2019-07-20T08:34:52.182Z - success: protocol uuid registerred
2019-07-20T08:34:52.182Z - success: protocol db registerred
2019-07-20T08:34:52.182Z - success: protocol thumbnail registerred
2019-07-20T08:34:52.182Z - success: protocol unpack registerred
2019-07-20T08:34:52.182Z - success: protocol disable-commonjs registerred
2019-07-20T08:34:52.276Z - normal: connected!
2019-07-20T08:34:52.277Z - normal: Check project /Users/dinghao/Documents/projects/game/OpenCar
2019-07-20T08:34:52.278Z - normal: Initializing project /Users/dinghao/Documents/projects/game/OpenCar
2019-07-20T08:34:52.617Z - normal: Initializing Cocos2d
2019-07-20T08:34:53.357Z - normal: Initializing engine extends
2019-07-20T08:34:53.390Z - success: asset-db-debugger loaded
2019-07-20T08:34:53.392Z - success: baidu-adapter loaded
2019-07-20T08:34:53.394Z - success: color-picker loaded
2019-07-20T08:34:53.459Z - success: fb-audience-network loaded
2019-07-20T08:34:53.491Z - success: fb-live-stream loaded
2019-07-20T08:34:53.495Z - success: google-play-instant loaded
2019-07-20T08:34:53.512Z - success: huawei-runtime loaded
2019-07-20T08:34:53.761Z - success: cpk-publish loaded
2019-07-20T08:34:53.764Z - success: jsb-adapter loaded
2019-07-20T08:34:53.770Z - success: oppo-runtime loaded
2019-07-20T08:34:53.782Z - success: package-manager loaded
2019-07-20T08:34:53.877Z - success: qqplay-adapter loaded
2019-07-20T08:34:53.880Z - success: runtime-dev-tools loaded
2019-07-20T08:34:53.892Z - success: sdkbox loaded
2019-07-20T08:34:53.901Z - success: tester loaded
2019-07-20T08:34:53.911Z - success: ui-grid loaded
2019-07-20T08:34:53.921Z - success: ui-kit-preview-extra loaded
2019-07-20T08:34:53.929Z - success: ui-kit-preview loaded
2019-07-20T08:34:53.938Z - success: ui-kit loaded
2019-07-20T08:34:53.947Z - success: ui-tree loaded
2019-07-20T08:34:53.952Z - success: vivo-runtime loaded
2019-07-20T08:34:53.954Z - success: weapp-adapter loaded
2019-07-20T08:34:53.956Z - success: xiaomi-adapter loaded
2019-07-20T08:34:54.000Z - success: assets loaded
2019-07-20T08:34:54.007Z - success: builder loaded
2019-07-20T08:34:54.207Z - success: cocos-services loaded
2019-07-20T08:34:54.217Z - success: console loaded
2019-07-20T08:34:54.251Z - success: fb-instant-games loaded
2019-07-20T08:34:54.252Z - success: google-instant-games loaded
2019-07-20T08:34:54.261Z - success: hierarchy loaded
2019-07-20T08:34:54.272Z - success: inspector loaded
2019-07-20T08:34:54.273Z - success: keystore loaded
2019-07-20T08:34:54.281Z - success: node-library loaded
2019-07-20T08:34:54.282Z - success: package-asset loaded
2019-07-20T08:34:54.283Z - success: preferences loaded
2019-07-20T08:34:54.290Z - success: project-exporter loaded
2019-07-20T08:34:54.299Z - success: project-importer loaded
2019-07-20T08:34:54.306Z - success: project-settings loaded
2019-07-20T08:34:54.314Z - success: scene loaded
2019-07-20T08:34:54.316Z - success: simulator-debugger loaded
2019-07-20T08:34:54.316Z - success: sprite-editor loaded
2019-07-20T08:34:54.324Z - success: store loaded
2019-07-20T08:34:54.332Z - success: timeline loaded
2019-07-20T08:34:54.337Z - success: xiaomi-runtime loaded
2019-07-20T08:34:55.085Z - normal: Loading packages
2019-07-20T08:34:55.095Z - normal: Watching packages
2019-07-20T08:34:55.204Z - normal: Run Application
2019-07-20T08:34:55.540Z - info: Cocos Services load base data!
2019-07-20T09:02:46.188Z - failed: [db-task][sync-changes] Failed to import asset /Users/dinghao/Documents/projects/game/OpenCar/assets/scripts/JoyStick.js, message: Compile error: SyntaxError: /Users/dinghao/Documents/projects/game/OpenCar/assets/scripts/JoyStick.js: Unexpected token, expected , (40:4)
  38 | 
  39 |     //
> 40 |     touchStartHandler(event) {
     |     ^
  41 |         console.log('开始触摸');
  42 |         const touchPos = this.node.convertToNodeSpaceAR(event.getLocation());
  43 | 
    at Parser.pp$5.raise (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:4454:13)
    at Parser.pp.unexpected (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:1761:8)
    at Parser.pp.expect (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:1749:33)
    at Parser.pp$3.parseObj (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:3978:12)
    at Parser.pp$3.parseExprAtom (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:3719:19)
    at Parser.pp$3.parseExprSubscripts (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:3494:19)
    at Parser.pp$3.parseMaybeUnary (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:3474:19)
    at Parser.pp$3.parseExprOps (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:3404:19)
    at Parser.pp$3.parseMaybeConditional (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:3381:19)
    at Parser.pp$3.parseMaybeAssign (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:3344:19)
